--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "next"
   ],
   "env": {
     "browser": true,
