--- a/package.json
+++ b/package.json
@@ -1,43 +1,63 @@
 {
   "private": true,
   "scripts": {
-    "build": "poi --prod",
-    "develop": "poi --serve",
-    "prepare": "husky install",
-    "test": "tsc && eslint --ext=js,ts,tsx ."
+    "build": "next build",
+    "develop": "next dev",
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "clsx": "^1.1.1",
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/server": "^11.0.0",
+    "@emotion/styled": "^11.1.5",
+    "@hookform/resolvers": "^2.6.1",
     "escape-string-regexp": "^5.0.0",
+    "got": "^11.8.2",
     "gsap": "^3.6.1",
+    "jsdom": "^16.6.0",
     "lodash": "^4.17.21",
-    "modern-normalize": "^1.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^11.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.11.1",
+    "react-use": "^17.2.4",
     "react-use-websocket": "^2.5.0",
-    "tekko": "^2.4.0"
+    "tekko": "^2.4.0",
+    "vest": "^3.2.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.8",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
-    "@poi/plugin-typescript": "^12.0.1",
-    "@semantic-release/exec": "^5.0.0",
-    "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
+    "@types/jsdom": "^16.2.13",
+    "@types/lodash": "^4.14.171",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-helmet": "^6.1.1",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
-    "eslint": "^7.24.0",
+    "autoprefixer": "^10.2.5",
+    "eslint": "^7.23.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.2",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
-    "poi": "^12.4.2",
+    "postcss": "8.2.9",
     "prettier": "^2.2.1",
-    "sass": "^1.32.8",
-    "sass-loader": "^10.1.1",
+    "tailwindcss": "^2.2.0",
+    "twin.macro": "^2.5.0",
     "typescript": "^4.2.4"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "emotion"
+    }
   },
   "commitlint": {
     "extends": [
