--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "noEmit": true,
     "strict": true,
-    "target": "es5",
-    "module": "es2015",
-    "jsx": "react-jsx",
+    "noEmit": true,
+    "jsx": "preserve",
+    "target": "esnext",
+    "module": "esnext",
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
