--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "@emotion/server": "^11.0.0",
     "@emotion/styled": "^11.1.5",
     "@hookform/resolvers": "^2.6.1",
-    "escape-string-regexp": "^5.0.0",
     "got": "^11.8.2",
     "gsap": "^3.6.1",
-    "jsdom": "^16.6.0",
+    "htmlparser2": "^6.1.0",
     "lodash": "^4.17.21",
     "next": "^11.0.1",
     "prop-types": "^15.7.2",
@@ -33,7 +32,6 @@
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "@emotion/babel-preset-css-prop": "^11.2.0",
-    "@types/jsdom": "^16.2.13",
     "@types/lodash": "^4.14.171",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
