--- a/.eslintrc
+++ b/.eslintrc
@@ -1,30 +1,13 @@
 {
   "root": true,
-  "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true
-    }
-  },
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:prettier/recommended",
-    "next"
+    "plugin:prettier/recommended"
   ],
   "env": {
     "browser": true,
     "es2020": true,
     "node": true
-  },
-  "rules": {
-    "react/react-in-jsx-scope": "off"
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
   },
   "overrides": [
     {
@@ -33,8 +16,7 @@
         "*.ts"
       ],
       "extends": [
-        "plugin:@typescript-eslint/recommended",
-        "prettier"
+        "plugin:@typescript-eslint/recommended"
       ]
     }
   ]
