--- a/package.json
+++ b/package.json
@@ -7,55 +7,34 @@
     "test": "next lint"
   },
   "dependencies": {
-    "@emotion/css": "^11.1.3",
-    "@emotion/react": "^11.1.5",
-    "@emotion/server": "^11.0.0",
-    "@emotion/styled": "^11.1.5",
-    "@hookform/resolvers": "^2.6.1",
-    "got": "^11.8.2",
-    "gsap": "^3.6.1",
-    "htmlparser2": "^6.1.0",
+    "antd": "^5.0.1",
+    "goober": "^2.1.11",
+    "gsap": "^3.11.3",
+    "htmlparser2": "^8.0.1",
     "lodash": "^4.17.21",
-    "next": "^11.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.11.1",
-    "react-use": "^17.2.4",
-    "react-use-websocket": "^2.5.0",
-    "tekko": "^2.4.0",
-    "vest": "^3.2.4"
+    "next": "^13.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-use": "^17.4.0",
+    "sockette": "^2.0.6",
+    "tekko": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.1.1",
-    "@emotion/babel-preset-css-prop": "^11.2.0",
-    "@types/lodash": "^4.14.171",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-helmet": "^6.1.1",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "@typescript-eslint/parser": "^4.21.0",
-    "autoprefixer": "^10.2.5",
-    "eslint": "^7.23.0",
-    "eslint-config-next": "^11.0.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.23.2",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.5.4",
-    "postcss": "8.2.9",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.2.0",
-    "twin.macro": "^2.5.0",
-    "typescript": "^4.2.4"
-  },
-  "babelMacros": {
-    "twin": {
-      "preset": "emotion"
-    }
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@types/lodash": "^4.14.190",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "csstype": "^3.1.1",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4",
+    "prettier": "^2.8.0",
+    "typescript": "^4.9.3"
   },
   "commitlint": {
     "extends": [
@@ -63,6 +42,6 @@
     ]
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": "eslint --fix"
+    "*.{ts,tsx}": "eslint --fix"
   }
 }
