--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+    "incremental": true,
     "noEmit": true,
     "jsx": "preserve",
     "target": "esnext",
@@ -19,7 +20,7 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": [
+      "~/*": [
         "src/*"
       ]
     }
