--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^7.28.0",
     "antd": "^5.0.1",
     "goober": "^2.1.11",
     "gsap": "^3.11.3",
