chore: cleanup & upgrade

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "next lint"
   },
   "dependencies": {
-    "@sentry/nextjs": "^7.28.0",
-    "antd": "^5.0.1",
-    "goober": "^2.1.11",
-    "gsap": "^3.11.3",
-    "htmlparser2": "^8.0.1",
+    "@sentry/nextjs": "^7.57.0",
+    "antd": "^5.6.4",
+    "goober": "^2.1.13",
+    "gsap": "^3.12.2",
+    "htmlparser2": "^9.0.0",
     "lodash": "^4.17.21",
-    "next": "^13.0.5",
+    "next": "^13.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-use": "^17.4.0",
@@ -21,21 +21,22 @@
     "tekko": "^3.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.3.0",
-    "@commitlint/config-conventional": "^17.3.0",
-    "@types/lodash": "^4.14.190",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "csstype": "^3.1.1",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "csstype": "^3.1.2",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.0.4",
-    "prettier": "^2.8.0",
-    "typescript": "^4.9.3"
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.6"
   },
   "commitlint": {
     "extends": [
